# gen_iv_battle_hall_analyzer

./: CMakeLists.txt  main.cpp
data/fresh/: notes
data/raw/: battle_hall_pokemon
src/: Items.h  Pokemon.h  PokemonState.h  SimulationState.h  abilities.h  battle_hall_data_source.cpp  battle_hall_data_source.h  battle_simulator.cpp  battle_simulator.h  config.h  custom_pokemon.cpp  custom_pokemon.h  hit_analyzer.cpp  hit_analyzer.h  moves.h  nature.cpp  nature.h  serebii_pokemon_data_source.cpp  serebii_pokemon_data_source.h  type_effectiveness.cpp  type_effectiveness.h
